added api routes and tests
